Improvements to the viewers section of the manual (FS#10531 by David Kaufmann)
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22764 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/jpegviewer.tex
+++ b/manual/plugins/jpegviewer.tex
@@ -1,12 +1,12 @@
 % $Id$ %
 \subsection{JPEG viewer}
-Open a JPEG file in the \setting{File Browser} to view it%
-\nopt{lcd_color}{ using Rockbox's 
-greyscale library}.
+This plugin opens \fname{.jpeg} files from the \setting{File Browser} to display them\nopt{lcd_color}{ using Rockbox's greyscale library}.
 \opt{swcodec}{
-  \note{When an audio file is playing the size of the image is limited as 
-  the decoding process needs to share memory with audio tracks. To be able to
-  view a bigger file you may need to stop playback.}
+\par
+\note{
+When an audio file is playing the size of the image is limited as 
+the decoding process needs to share memory with audio tracks. To be able to
+view a bigger file you may need to stop playback.}
 }
 \nopt{large_plugin_buffer}{%
 \note{This plugin will cause playback to stop.}%
