--- a/manual/plugins/movieplayer.tex
+++ b/manual/plugins/movieplayer.tex
@@ -2,5 +2,4 @@
 \subsection{Movie Player}
 Play movies on your \dap!  In order to do this, movies must be in AVI format,
 and then converted to \fname{.RVF}, Rockbox's own video format. For more
-details on how to use this plugin, please see
-\wikilink{VideoTutorial}.
+details on how to use this plugin, please see \wikilink{VideoTutorial}.
