--- a/manual/plugins/pngviewer.tex
+++ b/manual/plugins/pngviewer.tex
@@ -1,6 +1,7 @@
 % $Id: $id$ %
 \subsection{PNG viewer}
-Open a PNG file in the \setting{File Browser} to view it.\\%
+This plugin opens \fname{.png} files from the \setting{File Browser} to
+display them.
 \opt{swcodec}{
   \note{When an audio file is playing the size of the image is limited as 
   the decoding process needs to share memory with audio tracks. To be able to
