--- a/manual/plugins/ppmviewer.tex
+++ b/manual/plugins/ppmviewer.tex
@@ -1,8 +1,9 @@
 % $Id$ %
 \subsection{PPM viewer}
-Open a PPM file in the \setting{File Browser} to view it. PPM viewer exits
-when any button is pressed.\\
+This plugin opens \fname{.ppm} files from the \setting{File Browser}
+to display them. Exit the ppm viewer plugin by pressing any button.
 
-\note{Both ASCII PPM (P3) and raw PPM (P6) files are supported.
+\note{Both ASCII PPM (P3) and raw PPM (P6) files are supported.}
+
 For more information about PPM files, see
 \url{http://netpbm.sourceforge.net/doc/ppm.html}}
