--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -119,9 +119,38 @@ text files%
 \section{\label{ref:Viewersplugins}Viewers}
 
 Viewers are plugins which are associated with specific file extensions.
-They cannot be run directly but are started by ``playing''
-the associated file. Viewers are stored in the
-\textbf{/.rockbox/rocks/viewers/ }directory.
+They cannot be run directly but are started by ``playing''the associated file.
+Viewers are stored in the \fname{/.rockbox/rocks/viewers/} directory.
+\par
+\note{
+Some viewer plugins can only be used by selecting the \setting{Open With...}
+option from the \setting{Context Menu} (see \reference{ref:Contextmenu}).}
+\begin{table}
+\begin{rbtabular}{.92\textwidth}{Xlc}%
+      {\textbf{Viewer Plugin}& \textbf{Associated filetype(s)} & \textbf{Context Menu only}}%
+      {}{}
+  Shortcuts             & \fname{.link}                    & \\ 
+  Chip-8 Emulator       & \fname{.ch8}                     & \\
+  JPEG Viewer           & \fname{.jpg, .jpeg}              & \\
+  Lua scripting language& \fname{.lua}                     & \\
+  Midiplay              & \fname{.mid, .midi}              & \\
+  \opt{swcodec}{
+  MPEG Player           & \fname{.mpg, .mpeg, .mpv, .m2v}  & \\}
+  \opt{masf}{\opt{lcd_bitmap}{
+  Movie Player          & \fname{.rvf}                     & \\}}
+  PNG viewer            & \fname{.png}                     & \\
+  \opt{lcd_color}{
+  PPM viewer            & \fname{.ppm}                     & \\}
+  Rockboy               & \fname{.gb, .gbc}                & \\
+  Search                & \fname{.m3u, .m3u8}              & x \\
+  Sort                  & \fname{.*}                       & x \\
+  Text Viewer           & \fname{.txt, .*}                 & \\
+  VBRfix                & \fname{.mp3}                     & x \\
+  \opt{masf}{
+  Wavplay               & \fname{.wav}                     & \\}
+  ZXBox                 & \fname{.tap, .tax, .sna, .z80}   & \\
+\end{rbtabular}
+\end{table}
 
 {\input{plugins/shortcuts.tex}}
 
