--- a/manual/plugins/vbrfix.tex
+++ b/manual/plugins/vbrfix.tex
@@ -6,8 +6,9 @@ rate, time information and to more accurately fwd/rew in the stream.
 This function is especially useful when the playback of a file skips,
 fwd/rew does not work correctly or the time display is incorrect.
 To use this plugin, open the \setting{Context Menu} (see \reference{ref:Contextmenu})
-upon a \fname{.mp3} file and select \setting{Open With... $\rightarrow$ vbrfix}.
-
-\note{VBRfix can only run when music is
-  turned off (since it uses the same memory as the player) and can take a
-  while to complete if run on big files.}
+upon a \fname{.mp3} file and select \setting{Open With\dots $\rightarrow$ vbrfix}.
+\par
+\note{
+VBRfix can only run when music is turned off (since it uses
+the same memory as the player) and can take a while to complete if
+run on big files.}
