Fix unbalanced braces
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22767 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/ppmviewer.tex
+++ b/manual/plugins/ppmviewer.tex
@@ -6,4 +6,4 @@ to display them. Exit the ppm viewer plugin by pressing any button.
 \note{Both ASCII PPM (P3) and raw PPM (P6) files are supported.}
 
 For more information about PPM files, see
-\url{http://netpbm.sourceforge.net/doc/ppm.html}}
+\url{http://netpbm.sourceforge.net/doc/ppm.html}
