French translation: minor rewording for one string.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22790 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/francais.lang
+++ b/apps/lang/francais.lang
@@ -12617,10 +12617,10 @@
     *: "Skin RAM usage:"
   </source>
   <dest>
-    *: "Tampon écrans de lecture:"
+    *: "Tampon du thème:"
   </dest>
   <voice>
-    *: "Tampon des écrans de lecture"
+    *: "Tampon du thème utilisé"
   </voice>
 </phrase>
 <phrase>
