Use singular to make a few strings in the German translation sound a bit more like a setting, corresponding to the initial English change. (still open to suggestions)
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22792 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/deutsch.lang
+++ b/apps/lang/deutsch.lang
@@ -2584,11 +2584,11 @@
   </source>
   <dest>
     *: none
-    lcd_bitmap: "Schriftarten"
+    lcd_bitmap: "Schriftart"
   </dest>
   <voice>
     *: none
-    lcd_bitmap: "Schriftarten"
+    lcd_bitmap: "Schriftart"
   </voice>
 </phrase>
 <phrase>
@@ -2599,10 +2599,10 @@
     *: "While Playing Screen"
   </source>
   <dest>
-    *: "WPS-Dateien"
+    *: "WPS-Datei"
   </dest>
   <voice>
-    *: "WPS-Dateien"
+    *: "WPS-Datei"
   </voice>
 </phrase>
 <phrase>
@@ -2615,11 +2615,11 @@
   </source>
   <dest>
     *: none
-    remote: "RWPS-Dateien"
+    remote: "RWPS-Datei"
   </dest>
   <voice>
     *: none
-    remote: "RWPS-Dateien"
+    remote: "RWPS-Datei"
   </voice>
 </phrase>
 <phrase>
